menu , and hero part added in header part

--- a/index.html
+++ b/index.html
@@ -4,12 +4,47 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Influence Gear</title>
+  <!-- fontawesome link -->
+  <link rel="stylesheet" href="assets/fonts/css/all.css">
   <!-- style.css -->
   <link rel="stylesheet" href="assets/css/style.css">
   <!-- responsive.css -->
   <link rel="stylesheet" href="assets/css/responsive.css">
 </head>
 <body>
-  
+<!-- header part start -->
+<header>
+  <!-- nav start -->
+  <nav>
+    <h3 class="site-title text-primary">Influencer products</h3>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Products</a></li>
+      <li><a href="#">Sign up</a></li>
+      <li><a href="#">Log in</a></li>
+      <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
+      <li><a href="#"><i class="fa-solid fa-cart-arrow-down"></i></a></li>
+    </ul>
+  </nav>
+  <!-- nav end -->
+  <!-- hero part start -->
+  <div class="hero">
+    <div class="hero-text-box">
+      <h1 class="text-primary hero-title">Start your Journey as Influencer</h1>
+      <p class="text-primary hero-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+      <button class="btn-primary hero-btn">Preebook Now &nbsp;<i class="fa fa-arrow-right"></i></button>
+    </div>
+    <div class="hero-img-box">
+      <img src="assets/images/main-camera.png" alt="hero image" class="hero-img">
+    </div>
+  </div>
+  <!-- hero part end -->
+</header>
+<!-- header part end -->
+<!-- main part start -->
+<main></main>
+<!-- main part end -->
+<!-- footer part start -->
+<!-- footer part end -->
 </body>
 </html>
