sponsor part added

--- a/index.html
+++ b/index.html
@@ -14,23 +14,29 @@
 <body>
 <!-- header part start -->
 <header>
-  <!-- nav start -->
   <nav>
-    <h3 class="site-title text-primary">Influencer products</h3>
+    <div class="site-title">
+      <h3 class="text-primary">Influencer products</h3>
+    </div>
     <ul>
       <li><a href="#">Home</a></li>
       <li><a href="#">Products</a></li>
       <li><a href="#">Sign up</a></li>
       <li><a href="#">Log in</a></li>
       <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
-      <li><a href="#"><i class="fa-solid fa-cart-arrow-down"></i></a></li>
+      <li class="site-cart"><a href="#"></a></li>
     </ul>
+    <div class="bars">
+      <i class="fa-solid fa-bars"></i>
+      <i class="fa-solid fa-cart-arrow-down"></i>
+      
+    </div>
   </nav>
   <!-- nav end -->
   <!-- hero part start -->
   <div class="hero">
     <div class="hero-text-box">
-      <h1 class="text-primary hero-title">Start your Journey as Influencer</h1>
+      <h1 class="text-primary hero-title">Start your Journey as<br>Influencer</h1>
       <p class="text-primary hero-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
       <button class="btn-primary hero-btn">Preebook Now &nbsp;<i class="fa fa-arrow-right"></i></button>
     </div>
@@ -42,7 +48,21 @@
 </header>
 <!-- header part end -->
 <!-- main part start -->
-<main></main>
+<main>
+  <!-- sponsored part start -->
+  <section class="sponsors">
+    <div class="sponsors-container">
+      <img src="assets/logos/Alibaba.svg" alt="">
+      <img src="assets/logos/Amazon.svg" alt="">
+      <img src="assets/logos/Daraz.pk Logo.svg" alt="">
+      <img src="assets/logos/Ebay.svg" alt="">
+      <img src="assets/logos/Rakuten.svg" alt="">
+      <img src="assets/logos/Walmart.svg" alt="">
+      <img src="assets/logos/Target.svg" alt="">
+    </div>
+  </section>
+  <!-- sponsored part end -->
+</main>
 <!-- main part end -->
 <!-- footer part start -->
 <!-- footer part end -->
